<resources>
    <string name="app_name">My Carpathians</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="access_token" translatable="false">pk.eyJ1Ijoidnlsa3kiLCJhIjoiY2pibTI5NDdlMXZkNTMxb2JneXV4MzBwZiJ9.T4Kakw4VplpStA54g19JMA</string>
    <string name="facebook_app_id" translatable="false">1535201253190515</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1535201253190515</string>
    <string name="places" translatable="false">PLACE</string>
    <string name="routes">ROUTES</string>
    <string name="settings">SETTINGS</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="emailpassword_title_text">Please enter your email</string>
    <string name="signed_out">signed out</string>
    <string name="sign_in">sign in</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">sigin out</string>
    <string name="verify_email">verifity email</string>
    <string name="emailpassword_status_fmt" translatable="false">Email User: %1$s (verified: %2$b)</string>
    <string name="firebaseui_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebaseui_title_text" translatable="false">FirebaseUI Auth</string>
    <string name="firebase_status_fmt" translatable="false">Firebase User: %s</string>
    <string name="firebase_user_management" translatable="false">Firebase User Management</string>
    <string name="label_facebook_login" translatable="false">Firebase + Facebook Login</string>
    <string name="desc_facebook_login" translatable="false">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="facebook_status_fmt" translatable="false">Facebook User: %s</string>
    <string name="facebook_title_text" translatable="false">Facebook Login</string>
    <string name="desc_firebase_lockup" translatable="false">Firebase logo and name</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post" translatable="false">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post" translatable="false">Photo Post</string>
    <string name="you_picked" translatable="false">You picked:</string>
    <string name="no_friends_selected" translatable="false">No friends selected</string>
    <string name="no_place_selected" translatable="false">No place selected</string>
    <string name="pick_seattle_place" translatable="false">Pick a Seattle Place</string>
    <string name="app_id" translatable="false">355198514515820</string>
    <string name="exception" translatable="false">Exception: %1$s</string>
    <string name="title_activity_facebook_login1" translatable="false">FacebookLoginActivity1</string>
    <string name="dialog_title">New Region name!</string>
    <string name="dialog_message">Downloads the map region you currently are viewing. To change the size of the offline map, go to the settings.</string>
    <string name="dialog_positive_button">Download</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_toast">Region name cannot be empty.</string>
    <string name="end_progress_success">Region downloaded successfully.</string>
    <string name="toast_no_regions_yet">You have no regions yet.</string>
    <string name="toast_region_deleted">Region deleted</string>
    <string name="navigate_positive_button">Navigate to</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="navigate_negative_button_title">Cancel</string>
    <string name="navigate_title">OfflineMap list</string>
    <string name="region_name">Region %1$d</string>
    <string name="set_region_name_hint">Enter name</string>
    <string name="list_button_text">Offline regions</string>
    <string name="download_button_text">Download region</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_link_to_register" translatable="false">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login" translatable="false">Already registered. Login Me!</string>
    <string name="title_activity_reset_password" translatable="false">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password!</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_action">Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login">Go</string>
    <string name="title_info">INFO</string>
    <string name="title_place_around">PLACES </string>
    <string name="title_rout_around">ROUTS</string>
    <string name="message_login_dialog">Choose a registration method</string>
    <string name="registration">Sign up</string>
    <string name="no">No</string>
    <string name="internet">The Internet!</string>
    <string name="no_internet">"Unfortunately you are not connected to the Internet now! "</string>
    <string name="no_internet2">"Authentication management is not available! "</string>
    <string name="publish">Publish</string>
    <string name="error_publisher">To upload, you need to fill in all the data!</string>
    <string name="error_publisher_1p">No name given</string>
    <string name="error_publisher_3p">No title information about place!</string>
    <string name="error_publisher_2r">No position given</string>
    <string name="error_publisher_3r">No title information about place</string>
    <string name="error_publisher_4r">No title information about place</string>
    <string name="error_publisher_5r">"No rout difficulty given "</string>
    <string name="another_photo_download">Another photo download</string>
    <string name="error_uploading">Error! Upload disapproved.</string>
    <string name="set_rating">Set rating place</string>
    <string name="add_to_favorite">Added to favorite list!</string>
    <string name="offline_message">Sorry, no internet access, you will be able to post data later</string>
    <string name="save_date">Save Data to Storage!</string>
    <string name="save_date_message">External memory is not available! And in the interior storage is not enough free space. You can not use this program in offline.</string>
    <string name="save_date_message_permission">You do not gave permission to download data to External Storage! Save data to Internal storage?</string>
    <string name="permission">Permission</string>
    <string name="no_granded_permission">You do not gave any permission</string>
    <string name="anonymous">Anonymous</string>
    <string name="button_authorization">Authentication</string>
    <string name="dialog_get_registr">To access all the features of the program you need to register.</string>
    <string name="dialog_get_registr_message">Choose a method to register!</string>
    <string name="favorite">Favorite</string>
    <string name="your">Your</string>
    <string name="empty_list">List is empty!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_pass">Enter password!</string>
    <string name="dialog_register">Registration!</string>
    <string name="dialog_register_message">An account with this email address and password  does not exist! Create a new account?</string>
    <string name="button_create_new">Create new</string>
    <string name="button_check_pass">Check password</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="logged_in">Logged In</string>
    <string name="authentification_failed">Authentication failed.</string>
    <string name="disabled_google_play_servise">This device is not supported. Please install or update Google Play Service</string>
    <string name="save_date_message_error_save_rout">Your track contains less than three locations. Please check the quality of the gps signal and try again</string>
    <string name="permission_location">Allow location?</string>
    <string name="cancel">Cancel</string>
    <string name="settings_gps_message">GPS is not enabled. Do you want to go to settings Menu?</string>
    <string name="action_mode_title_new_region">New Region</string>
    <string name="action_mode_tsubitle_new_region">tab to select</string>
    <string name="need_internet_to_use">This action need Internet connection. Please check your connection</string>
    <string name="dialog_new_place">New Place</string>
    <string name="dialog_new_places_message">Please select a data entry method!</string>
    <string name="dialog_new_rout">New Route</string>
    <string name="dialog_new_rout_message">Do you want to create a new route?</string>
    <string name="gps_mode">Mode GPS</string>
    <string name="hands_mode">Mode Hands</string>
    <string name="action_mode_title_gps_connection">GPS Connection</string>
    <string name="action_mode_subtitle_gps_connection">please wait</string>
    <string name="action_mode_title_new_rout">New Route</string>
    <string name="subtitle_new_place">please tab to create place</string>
    <string name="btn_back">Back</string>
    <string name="settings_part_1">Loaded perimeter radius of the default offline Region (km)</string>
    <string name="settings_part_2">Radius of places nearby (km)</string>
    <string name="settings_part_3">Radius of Routes nearby  (km)</string>
    <string name="account_settings">Account settings</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="create_place">Create Place</string>
    <string name="create_route">Create Rout</string>
    <string name="create_region">Create Offline Region</string>
    <string name="list_offline_map">List Offline Map</string>
    <string name="language">Language</string>
    <string name="uk">UK</string>
    <string name="ru">RU</string>
    <string name="en">EN</string>
</resources>