<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.ActionActivity_">
    <item
        android:id="@+id/action_add_to_favorites"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/add_to_favorite"
        android:title="@string/add_to_favorite"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_edit"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_publish"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_upload"
        android:title="@string/publish"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_del_created_object"
        android:icon="@drawable/ic_delete_white_24px"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="never|always"/>
</menu>