<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_beck"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/on_back"
        android:title="@string/btn_back"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_del"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_delete_white_24px"
        android:title="@string/delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_save"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_done_white_24px"
        android:title="@string/save_date"
        app:showAsAction="never|always|withText"/>
</menu>