<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:context="com.example.key.my_carpathians.MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <Button
        android:id="@+id/button_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/places" />

    <Button
        android:id="@+id/button_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/routes" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />
</LinearLayout>
