<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.example.key.my_carpathians.StartActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <Button
        android:id="@+id/buttonRoutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/routes" />

    <Button
        android:id="@+id/buttonPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonRoutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/places" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonPlace"
        android:layout_marginTop="21dp"
        android:text="@string/settings" />

</RelativeLayout>
