<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/wallpaper_port"
    android:orientation="vertical"
    tools:context="com.keyVas.key.my_carpathians.activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSettingsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/language" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/primaryLightColor"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonUk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uk"/>

            <RadioButton
                android:id="@+id/radioButtonRu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ru"/>

            <RadioButton
                android:id="@+id/radioButtonEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/en"/>
        </RadioGroup>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/primaryLightColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="fill_horizontal"
                android:text="@string/settings_part_1"/>

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/pickerOfRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:np_dividerColor="@color/cardview_light_background"
                app:np_dividerThickness="3dp"
                app:np_height="90dp"
                app:np_max="50"
                app:np_min="5"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorAccent"
                app:np_textColor="@color/cardview_light_background"
                app:np_width="150dp">

            </com.shawnlin.numberpicker.NumberPicker>

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/primaryLightColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="fill_horizontal"
                android:text="@string/settings_part_2"/>

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/pickerOfPlacesAround"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:np_dividerColor="@color/cardview_light_background"
                app:np_dividerThickness="3dp"
                app:np_height="90dp"
                app:np_max="50"
                app:np_min="5"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorAccent"
                app:np_textColor="@color/cardview_light_background"

                app:np_width="150dp">

            </com.shawnlin.numberpicker.NumberPicker>

        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/primaryLightColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="fill_horizontal"
                android:text="@string/settings_part_3"/>

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/pickerOfRoutesAround"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:np_dividerColor="@color/cardview_light_background"
                app:np_dividerThickness="3dp"
                app:np_height="90dp"
                app:np_max="50"
                app:np_min="5"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorAccent"
                app:np_textColor="@color/cardview_light_background"
                app:np_width="150dp">

            </com.shawnlin.numberpicker.NumberPicker>

        </LinearLayout>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/primaryLightColor"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/account_settings"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_account"/>

        <Button
            android:id="@+id/buttonDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>
